--- a/club.html
+++ b/club.html
@@ -104,17 +104,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-               <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
-                    >Delegate Application</a
-                  >
+                <li>
+                  <a class="dropdown-item" href="./register/delegate_register.html">Delegate Application</a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
+                  <a class="dropdown-item" href="./register/ip_register.html"
                     >International Press Application</a
                   >
                 </li>
@@ -376,9 +370,8 @@ It is my conviction that AMIMUN'21 will be a resounding achievement and that the
             </div>
             <div class="col-md-5 order-md-1">
               <img
-              style="width: 100%;" 
                 class="d-block img-fluid"
-                src="./static/My-Pic.jpg"
+                src="./static/"
                 alt=""
               />
             </div>
@@ -447,7 +440,7 @@ AMIMUN'21, who have worked so meticulously to organize the conference.</span
               </button>
             </div>
             <div class="col-md-5">
-              <img class="d-block img-fluid"  style="width: 70%;" src="./static/nat.jpeg" alt="" />
+              <img class="d-block img-fluid" src="./static/nat.jpg" alt="" />
             </div>
           </div>
         </div>
