--- a/delegates/aippm.html
+++ b/delegates/aippm.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -103,11 +108,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
-                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
+               <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -178,13 +189,14 @@
           <!-- START THE FEATURETTES -->
           <div class="eb-container">
            <div class="col-md-3">
-            <img
+              <img
               class="d-block img-fluid"
-              src="../static/Aakarsh Shrivastava.jpg"
+              src="../static/Aniket Basu.jpeg"
               alt=""
             />
-            <h3 class="text-center m-3">Aakarsh Shrivastava</h3>
-            <h5 class="text-center m-3">Dept. Moderator</h5>
+            <h3 class="text-center m-3">Aniket Basu</h3>
+                        <h5 class="text-center m-3">Moderator</h5>
+            
 
           </div>
            <div class="col-md-3">
@@ -193,15 +205,16 @@
               src="../delegates-logo/aippm-ip.png"
               alt=""
             />
+             <a href="https://drive.google.com/drive/u/2/folders/1M31M6sIVmJ4Yjxq7uEoxXoKZZs68VlBg?fbclid=IwAR3MrgDsxxJLdDrDxEhDJgTC6_0Np0QhrbQYdLZ05PyKJ7MG_881pQGjGA0" target="_blank" class=" w-100 text-center p-3 btn btn-secondary">Background Guide</a>
            </div>
          <div class="col-md-3">
-            <img
+           <img
               class="d-block img-fluid"
-              src="../static/Aniket Basu.jpeg"
+              src="../static/Aakarsh Shrivastava.jpg"
               alt=""
             />
-            <h3 class="text-center m-3">Aniket Basu</h3>
-                        <h5 class="text-center m-3">Moderator</h5>
+            <h3 class="text-center m-3">Aakarsh Shrivastava</h3>
+            <h5 class="text-center m-3">Deputy Moderator</h5>
 
           </div>
         </div>
