--- a/delegates/csw.html
+++ b/delegates/csw.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -103,11 +108,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
-                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
+               <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -180,6 +191,7 @@
               src="../delegates-logo/unw-white.png"
               alt=""
             />
+             <a href="https://drive.google.com/drive/u/2/folders/1Wo_E8ooiny0j-DkeBi5adTrqx0BWHL3R?fbclid=IwAR3MrgDsxxJLdDrDxEhDJgTC6_0Np0QhrbQYdLZ05PyKJ7MG_881pQGjGA0"  target="_blank" class=" w-100 text-center p-3 btn btn-secondary">Background Guide</a>
            </div>
          <div class="col-md-3">
             <img
@@ -187,9 +199,9 @@
               src="../static/Aanya Wig.jpg"
               alt=""
             />
+           
             <h3 class="text-center m-3">Aanya Wig</h3>
                         <h5 class="text-center m-3">Research Associate</h5>
-
           </div>
         </div>
 
