--- a/delegates/ctc.html
+++ b/delegates/ctc.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -104,10 +109,16 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -188,6 +199,7 @@
               src="../delegates-logo/ctc.png"
               alt=""
             />
+             <a href="https://drive.google.com/drive/u/2/folders/1IxPJgJcrNDqEY0zL5lVzlbE6eYQ0tpE6?fbclid=IwAR3MrgDsxxJLdDrDxEhDJgTC6_0Np0QhrbQYdLZ05PyKJ7MG_881pQGjGA0" target="_blank" class=" w-100 text-center p-3 btn btn-secondary">Background Guide</a>
            </div>
          <div class="col-md-3">
             <img
