--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+              <li>
+                  <a class="dropdown-item" href="./messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
@@ -101,11 +106,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
-                  <a class="dropdown-item" href="./register/delegate_register.html">Delegate Application</a>
+              <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
