--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+              <li>
+                  <a class="dropdown-item" href="./messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
@@ -339,7 +344,7 @@
                 <br />
                 Sincerely,<br />
                 Meshuwa K. Mawthoh<br />
-                Secretary-General<br />
+                Secretary General<br />
                 Amity International Model United Nations 2021
               </p>
               <div class="mt-1">
@@ -565,10 +570,10 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-5 col-md-5 mb-4 mb-lg-5 w-100">
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5 ">
             <img
               class="d-block m-auto img-fluid "
-              style="width: 3000px;"
+              style="width: 5000px;height: 158px;"
               src="./static/Doctors Without Borders.png"
               alt=""
             />
@@ -587,6 +592,26 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5 ">
+            <img
+              class="d-block img-fluid w-100"
+              src="./static/0001.jpg"
+              alt=""
+            />
+
+            <!-- <h2>Heading</h2>
+            <p>
+              Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
+              eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
+              amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor
+              mauris condimentum nibh.
+            </p>
+            <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details »</a
+              >
+            </p> -->
+          </div>
         </div>
         <!-- /.row -->
 
@@ -622,7 +647,7 @@
                     <h5 class="mb-0">Meshuwa K. Mawthoh</h5>
                     <p class="small text-muted">Phone: +91 7085490761</p>
                     <p class="small text-muted">Email: sgamimun@gmail.com</p>
-                    <p class="small text-muted">Post: Secretary-General</p>
+                    <p class="small text-muted">Post: Secretary General</p>
                   </div>
                 </div>
               </div>
