--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -62,6 +62,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -104,15 +109,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
+               <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -268,7 +275,7 @@
                   <tbody>
                     <tr>
                       <th scope="row">1</th>
-                      <td>Zeeshan Fareed</td>
+                      <td>Zeeshan Farheed</td>
                       <td>USG</td>
                       <td>Bachelor of Business Administration (Hons.)</td>
                     </tr>
@@ -396,15 +403,12 @@
                       <td>BA-LLB</td>
                     </tr>
 
-
                     <tr>
                       <th scope="row">2</th>
                       <td>Sukriti Chandhok</td>
                       <td>Dy.USG</td>
                       <td>B.Des Product Design</td>
                     </tr>
-
-                
 
                     <tr>
                       <th scope="row">3</th>
@@ -515,6 +519,22 @@
                       <td>OC</td>
                       <td>B. Des( Product Design)</td>
                     </tr>
+
+Mudit Agarwal
+
+
+                      <tr>
+                      <th scope="row">4</th>
+                      <td>Bituz Mohammed </td>
+                      <td>OC</td>
+                      <td>BBA(Gen.)</td>
+                    </tr>
+                     <tr>
+                      <th scope="row">5</th>
+                      <td>Mudit Agarwal </td>
+                      <td>OC</td>
+                      <td>BBA(Gen.)</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -552,9 +572,9 @@
                   <tbody>
                     <tr>
                       <th scope="row">1</th>
-                      <td>vipul singla</td>
+                      <td>Vipul singla</td>
                       <td>USG</td>
-                      <td>bcom h</td>
+                      <td>Bcom H.</td>
                     </tr>
                   </tbody>
                 </table>
