--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -88,6 +88,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
