--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -66,6 +66,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+              <li>
+                  <a class="dropdown-item" href="./messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
@@ -104,15 +109,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
+               <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
