--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+              <li>
+                  <a class="dropdown-item" href="./messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
@@ -102,12 +107,14 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
