--- a/delegates/ga.html
+++ b/delegates/ga.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -103,15 +108,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
+               <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -189,7 +196,7 @@
               src="../static/Siddhant Bajaj.png"
               alt=""
             />
-            <h3 class="text-center m-3">Siddhant Baja</h3>
+            <h3 class="text-center m-3">Siddhant Bajaj</h3>
                         <h5 class="text-center m-3">Co-Chairperson</h5>
 
           </div>
@@ -199,6 +206,7 @@
               src="../delegates-logo/un-white.png"
               alt=""
             />
+            <a href="https://drive.google.com/drive/u/2/folders/1WOObNB872-R2_hdV58foOrI3hpyAQOkT?fbclid=IwAR3MrgDsxxJLdDrDxEhDJgTC6_0Np0QhrbQYdLZ05PyKJ7MG_881pQGjGA0" target="_blank" class=" w-100 text-center p-3 btn btn-secondary">Background Guide</a>
            </div>
          <div class="col-md-3">
             <img
