--- a/messages/sec.html
+++ b/messages/sec.html
@@ -62,6 +62,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -107,12 +112,14 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -290,7 +297,7 @@
                   class="w-100 card-img-top img-fluid d-block"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Sukriti Chandok</h5>
+                  <h5 class="mb-0">Sukriti Chandh2ok</h5>
                   <p class="small text-muted">
                     Deputy USG Creative Content Management
                   </p>
@@ -364,7 +371,7 @@
                   class="w-100 card-img-top img-fluid d-block"
                 />
                 <div class="p-4">
-                  <h5 class="mb-0">Zeeshan Farhed</h5>
+                  <h5 class="mb-0">Zeeshan Farheed</h5>
                   <p class="small text-muted">UDG Marketing & Promotions</p>
                 </div>
               </div>
