--- a/committes.html
+++ b/committes.html
@@ -26,33 +26,43 @@
         <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
       </nav>
       <h2>Committes</h2>
-      
+
       <!--
   Please note: this code is in no way ready to be used as is in production on your website. It will need to be adapted to be cross browser compliant & accessible. I just wanted to share how one might go about this effect with CSS & JS and no other dependencies
 -->
-<div class="container">
+<div class="container margin-top">
   <div class="card-column column-0">
-    <div class="card card-color-0">
+    <div class="card card-color-0 solid">
       <div class="border"></div>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-00.jpg" />
-      <h1>Hey now, you're an allstar</h1>
+      <img src="1.png" />
+      <h1 class="gray-text">Hey now, you're an allstar</h1>
     </div>
-    <div class="card card-color-2">
+    <div class="card card-color-2 solid">
       <div class="border"></div>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-02.jpg" />
-      <h1>Hey now, you're a rock star</h1>
+      <img src="2.png" />
+      <h1 class="gray-text">Hey now, you're a rock star</h1>
+    </div>
+    <div class="card card-color-4 solid">
+      <div class="border"></div>
+      <img src="3.png" />
+      <h1 class="gray-text">Hey now, you're a rock star</h1>
     </div>
   </div>
   <div class="card-column column-1">
-    <div class="card card-color-1">
+    <div class="card card-color-1 solid">
       <div class="border"></div>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-01.jpg" />
-      <h1>Get your game on, go play</h1>
+      <img src="4.png" />
+      <h1 class="gray-text">Get your game on, go play</h1>
     </div>
-    <div class="card card-color-3">
+    <div class="card card-color-3 solid">
       <div class="border"></div>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53148/deathtostock-03.jpg" />
-      <h1>Get the show on, get paid</h1>
+      <img src="5.png" />
+      <h1 class="gray-text">Get the show on, get paid</h1>
+    </div>
+    <div class="card card-color-5 solid">
+      <div class="border"></div>
+      <img src="6.png" />
+      <h1 class="gray-text">Get the show on, get paid</h1>
     </div>
   </div>
 </div>
@@ -65,37 +75,24 @@
   <div class="text" id="open-content-text">
   </div>
 </div>
-
-    </div>
+</div>
     <footer>
       <div class="footer-content">
-        <h3>code opacity</h3>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste
-          corrupti doloribus odio sed!
-        </p>
-        <ul class="socials">
-          <li>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-linkedin-square"></i></a>
-          </li>
-        </ul>
+          <h3>code opacity</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus odio sed!</p>
+          <ul class="socials">
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+          </ul>
       </div>
       <div class="footer-bottom">
-        <p>copyright &copy;2020 Amity University.</p>
+          <p>copyright &copy;2020 Amity University.</p>
       </div>
-    </footer>
+  </footer>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
       integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
