--- a/CLUB-index.html
+++ b/CLUB-index.html
@@ -4,10 +4,27 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Block Reveal Effect On Scroll</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="committes.css" />
         <link rel="stylesheet" href="CLUB-styles.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
     <body>
+        <nav>
+            <div class="links">
+              <a href="/index.html">Home</a><a href="/committes.html">Committes</a>
+            </div>
+            <div id="logo">
+              <img src="./assets/logo.svg" alt="AMIMUN logo" srcset="" />
+              <p>AMIMUN 2022</p>
+            </div>
+            <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
+          </nav>
         <div class="smooth-scroll-wrapper">
             <div class="content">
                 <div class="container">
