added contact us and collaborators

--- a/index.html
+++ b/index.html
@@ -5,25 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
     <div id="back">
+      <!-- <p class="banner"><a href="#">Register now</a> for AMIMUN'22</p> -->
       <nav>
-        <div class="links"><a href="/index.html">Home</a><a href="/committes.html">Committes</a></div>
-        <div id="logo">
-          <img src="./assets/logo.svg" alt="AMIMUN logo" srcset="" />
-          <p>AMIMUN 2022</p>
+        <div class="links">
+          <a href="/about.html">About</a>
+          <a href="/committes.html">Our Team</a>
+          <a href="/committes.html">Messages</a>
+          <a href="/committes.html">Committees</a>
         </div>
-        <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
+        <div id="logo">
+          <a href="./index.html"
+            ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+          /></a>
+        </div>
+        <div class="links">
+          <a href="#">Apply</a><a href="#">Gallery</a>
+          <a href="/committes.html">AMIMUN Club</a>
+          <a href="/committes.html">Contact Us</a>
+        </div>
       </nav>
-      <h2>
-        Winds of Change:<br />
-        Navigating through a new normal <br />
-        in the multipolar world
-      </h2>
+
+      <div class="header-section">
+        <h2 class="header">Winds of Change:<br /></h2>
+        <h2 class="header">Navigating through a new normal <br /></h2>
+        <h2 class="header">in the multipolar world</h2>
+      </div>
+
       <div id="main">
         <div id="one" class="imgcontainer"></div>
         <div id="holder1" class="holder">
@@ -31,7 +48,7 @@
           <div id="three" class="imgcontainer"></div>
         </div>
         <div id="videoplayer">
-          <div class="videoplayer-center">
+          <div class="videoplayer-center-text">
             <h1 class="center-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi,
               vero?
@@ -46,22 +63,82 @@
         </div>
         <div id="six" class="imgcontainer"></div>
       </div>
-      <h2>A Message from Secratary General</h2>
+      <h2 class="heading">A Message from Secratary General</h2>
       <div class="section">
-        <div id="sec-gen-img"></div>
+        <div class="img-text-container">
+          <div id="sec-gen-img"></div>
+          <p><b>Shubhangi Thakur</b>, Secretary General of AMIMUN 2022</p>
+        </div>
         <p id="sec-gen-msg">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-          hic maiores id sint voluptatem et temporibus at accusantium fugiat,
-          quod earum obcaecati, ea iure perferendis totam beatae nostrum
-          consequuntur corporis esse doloribus sed error repellat dolorem
-          incidunt! Eveniet, quisquam, vel itaque eum beatae dolorem quia fugit
-          error molestiae vitae minus.
+          Dear Delegate, Human history, especially the past two years, has been
+          inundated with times of great sorrow and strife. Yet, we continue to
+          march forward, forever continuing on towards the horizon. It is with
+          this sentiment of determination, that I invite you to Amity
+          International Model United Nations 2022 (AMIMUN’22). The 11th edition
+          of the AMIMUN Conference will be held online from Saturday, January
+          22nd, to Sunday, January 23rd, 2022. <br />
+
+          Each iteration of AMIMUN has expanded upon its legacy with great
+          success, from managing greater numbers each year, to ensuring global
+          participation with our international delegates. We, as the secretariat
+          of AMIMUN’22, are confident in our ability to stay true to tradition
+          and bring to you an exceptional debating experience. Despite all that
+          has transpired, we shall not be deterred- “Preserverantia Omnia
+          Vincit”.<br />
+          AMIMUN’22 is the optimal platform for students across the world to
+          display their fervor for debate through constructive discussion, while
+          simultaneously enabling them to delve further into continuous changes
+          occurring across the world. During this edition, we believe the
+          agendas set will push delegates to truly reflect on the issues today,
+          showing them just how vital it is to persevere above all. We look
+          forward to seeing delegates flourish through this experience, and hope
+          to aid in their path towards being diplomatic delegates, and also
+          holistic young leaders. I would like to take this opportunity to thank
+          our Founder President Sir, Chancellor Sir, Vice-Chancellor Ma’am,
+          Faculty Coordinators, Partners, and Sponsors for their unabating
+          support for AMIMUN'22, and for making this conference possible. On
+          behalf of the secretariat, I extend a warm invitation to all delegates
+          and hope this conference will be as productive for you as an
+          individual, and as a delegate. Remember, “Preserverantia Omnia
+          Vincit”- perseverance conquers all things. I wish you all the very
+          best. <br />
         </p>
       </div>
 
       <div class="section-sponsors">
-        <h2>Our Sponsors</h2>
-        <div class="cursor"></div>
+        <h2 class="heading">Our Sponsors</h2>
+        <h3 class="comming-soon" >Comming Soon</h3>
+        <!-- <div class="cursor"></div> -->
+        <!-- <div class="wrapper">
+          <div class="project-list">
+            <div class="project p-1">
+              <div class="project-title"><h1>Motionland</h1></div>
+              <div class="project-categ">Branding</div>
+              <div class="project-overlay"></div>
+            </div>
+            <div class="project p-2">
+              <div class="project-title"><h1>Focus Reactive</h1></div>
+              <div class="project-categ">Photography</div>
+              <div class="project-overlay"></div>
+            </div>
+            <div class="project p-3">
+              <div class="project-title"><h1>Aspect</h1></div>
+              <div class="project-categ">Web Design</div>
+              <div class="project-overlay"></div>
+            </div>
+            <div class="project p-4">
+              <div class="project-title"><h1>Logomark</h1></div>
+              <div class="project-categ">Branding</div>
+              <div class="project-overlay"></div>
+            </div>
+          </div>
+        </div> -->
+      </div>
+
+      <div class="section-sponsors">
+        <h2 class="heading">Our Collaborators</h2>
+        <h3 class="comming-soon" >Comming Soon</h3>
+        <!-- <div class="cursor"></div>
         <div class="wrapper">
           <div class="project-list">
             <div class="project p-1">
@@ -85,25 +162,80 @@
               <div class="project-overlay"></div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
+    <hr />
     <footer>
       <div class="footer-content">
-          <h3>code opacity</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus odio sed!</p>
-          <ul class="socials">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-          </ul>
+        <div class="content-one">
+          <h3>Conference Information</h3>
+
+          <p>
+            January 20-23, 2022<br />
+            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+          </p>
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
+            width="600"
+            height="200"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="content-two">
+          <h3>Contact Us</h3>
+
+          <div class="contact">
+            <p><b>Shubhangi Thakur</b>, Secretary General</p>
+            <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
+            <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
+            <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
+            <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
+            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
+            <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
+            <a href="mailto: chirag02.sharma@gmail.com"
+              >chirag02.sharma@gmail.com</a
+            >
+          </div>
+        </div>
       </div>
       <div class="footer-bottom">
-          <p>copyright &copy;2020 Amity University.</p>
+        <ul class="socials">
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-youtube"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-linkedin-square"></i></a>
+          </li>
+        </ul>
+        <p>copyright &copy;2020 Amity University.</p>
       </div>
-  </footer>
+    </footer>
     <script>
       var $cursor = $(".cursor"),
         $overlay = $(".project-overlay");
@@ -155,6 +287,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
