Fixed the columns, added responsive behaviour

--- a/committes.html
+++ b/committes.html
@@ -35,36 +35,44 @@
     <div class="card card-color-0 solid">
       <div class="border"></div>
       <img src="1.png" />
-      <h1 class="gray-text">Hey now, you're an allstar</h1>
+      <h1 class="gray-text">United Nations General Assembly</h1>
     </div>
     <div class="card card-color-2 solid">
       <div class="border"></div>
       <img src="2.png" />
-      <h1 class="gray-text">Hey now, you're a rock star</h1>
+      <h1 class="gray-text">World Health Assembly</h1>
     </div>
-    <div class="card card-color-4 solid">
+    <div class="card card-color-5 solid">
       <div class="border"></div>
-      <img src="3.png" />
-      <h1 class="gray-text">Hey now, you're a rock star</h1>
+      <img src="6.png" />
+      <h1 class="gray-text">All India Political Parties Meet</h1>
     </div>
   </div>
   <div class="card-column column-1">
     <div class="card card-color-1 solid">
       <div class="border"></div>
       <img src="4.png" />
-      <h1 class="gray-text">Get your game on, go play</h1>
+      <h1 class="gray-text">United Nations Commission on the Status of Women</h1>
     </div>
     <div class="card card-color-3 solid">
       <div class="border"></div>
       <img src="5.png" />
-      <h1 class="gray-text">Get the show on, get paid</h1>
-    </div>
-    <div class="card card-color-5 solid">
-      <div class="border"></div>
-      <img src="6.png" />
-      <h1 class="gray-text">Get the show on, get paid</h1>
+      <h1 class="gray-text">United Nations Human Right Council</h1>
     </div>
   </div>
+  <div class="card-column column-2">
+    <div class="card card-color-1 solid">
+      <div class="border"></div>
+      <img src="4.png" />
+      <h1 class="gray-text">International Press Corps</h1>
+    </div>
+    <div class="card card-color-4 solid">
+      <div class="border"></div>
+      <img src="3.png" />
+      <h1 class="gray-text">Counter Terrorism Committee</h1>
+    </div>
+  </div>
+
 </div>
 
 <div id="cover" class="cover"></div>
