added dropdown html; pending

--- a/index.html
+++ b/index.html
@@ -15,30 +15,42 @@
   </head>
   <body>
     <div id="back">
-      <!-- <p class="banner"><a href="#">Register now</a> for AMIMUN'22</p> -->
+      <p class="banner">
+        Registration for AMIMUN 2022 has opened. <a href="#">Register now</a> !
+      </p>
       <nav>
-        <div class="links">
-          <a href="/about.html">About</a>
-          <a href="/committes.html">Our Team</a>
-          <a href="/committes.html">Messages</a>
-          <a href="/committes.html">Committees</a>
-        </div>
+        <ul class="links">
+          <li><a href="#">About</a></li>
+          <li class="test">
+            <a href="#">Our Team</a>
+            <div class="sub-menu-1">
+              <ul>
+                <li><a href="">Our Guiding Light</a></li>
+                <li><a href="">Advisory Board</a></li>
+                <li><a href="">Secretariat</a></li>
+                <li><a href="">Organising Committee</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="./messages.html">Messages</a></li>
+          <li><a href="./committes.html">Committees</a></li>
+        </ul>
         <div id="logo">
           <a href="./index.html"
             ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
-        <div class="links">
-          <a href="#">Apply</a><a href="#">Gallery</a>
-          <a href="/committes.html">AMIMUN Club</a>
-          <a href="/committes.html">Contact Us</a>
-        </div>
+        <ul class="links">
+          <li><a href="#">Apply</a></li>
+            <li><a href="#">Gallery</a></li>
+          <li><a href="#">AMIMUN Club</a></li>
+          <li><a href="#">Resources</a></li>
+        </ul>
       </nav>
 
       <div class="header-section">
-        <h2 class="header">Winds of Change:<br /></h2>
-        <h2 class="header">Navigating through a new normal <br /></h2>
-        <h2 class="header">in the multipolar world</h2>
+        <h2 class="header theme">Preserverantia Omnia Vincit<br /></h2>
+        <h3 class="theme-eng">Perseverance Conquers All <br /></h3>
       </div>
 
       <div id="main">
@@ -67,7 +79,11 @@
       <div class="section">
         <div class="img-text-container">
           <div id="sec-gen-img"></div>
-          <p><b>Shubhangi Thakur</b>, Secretary General of AMIMUN 2022</p>
+          <p>
+            <b>Shubhangi Thakur</b><br />
+            Secretary General<br />
+            AMIMUN 2022
+          </p>
         </div>
         <p id="sec-gen-msg">
           Dear Delegate, Human history, especially the past two years, has been
@@ -102,12 +118,16 @@
           individual, and as a delegate. Remember, “Preserverantia Omnia
           Vincit”- perseverance conquers all things. I wish you all the very
           best. <br />
+          Sincerely,<br />
+          Shubhangi Thakur<br />
+          Secretary-General<br />
+          Amity International Model United Nations 2022<br />
         </p>
       </div>
 
       <div class="section-sponsors">
         <h2 class="heading">Our Sponsors</h2>
-        <h3 class="comming-soon" >Comming Soon</h3>
+        <h3 class="comming-soon">Comming Soon</h3>
         <!-- <div class="cursor"></div> -->
         <!-- <div class="wrapper">
           <div class="project-list">
@@ -137,7 +157,7 @@
 
       <div class="section-sponsors">
         <h2 class="heading">Our Collaborators</h2>
-        <h3 class="comming-soon" >Comming Soon</h3>
+        <h3 class="comming-soon">Comming Soon</h3>
         <!-- <div class="cursor"></div>
         <div class="wrapper">
           <div class="project-list">
@@ -227,7 +247,7 @@
             <a href="#"><i class="fa fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
           </li>
           <li>
             <a href="#"><i class="fa fa-linkedin-square"></i></a>
