addded dropdown sub-menu
slight problem with hover, dropdown disappears the moment you try to go down the sub-menu

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         <ul class="links">
           <li><a href="#">About</a></li>
           <li class="test">
-            <a href="#">Our Team</a>
-            <div class="sub-menu-1">
+            <a href="#" class="team-menu">Our Team</a>
+            <div class="dropdown-menu">
               <ul>
+                <div class="dropdown-item">
                 <li><a href="">Our Guiding Light</a></li>
                 <li><a href="">Advisory Board</a></li>
                 <li><a href="">Secretariat</a></li>
                 <li><a href="">Organising Committee</a></li>
+                </div>
               </ul>
             </div>
           </li>
@@ -41,7 +43,15 @@
           /></a>
         </div>
         <ul class="links">
-          <li><a href="#">Apply</a></li>
+          <li class="test">
+            <a href="#" class="team-menu">Apply</a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="" class="dropdown-item">Delegate Application</a></li>
+                <li><a href="" class="dropdown-item">International Press Application</a></li>
+              </ul>
+            </div>
+          </li>
             <li><a href="#">Gallery</a></li>
           <li><a href="#">AMIMUN Club</a></li>
           <li><a href="#">Resources</a></li>
