Made landing page and index responsive
made them more resposive

--- a/CLUB-index.html
+++ b/CLUB-index.html
@@ -17,13 +17,21 @@
     <body>
         <nav>
             <div class="links">
-              <a href="/index.html">Home</a><a href="/committes.html">Committes</a>
+              <a href="/about.html">About</a>
+              <a href="/committes.html">Our Team</a>
+              <a href="/committes.html">Messages</a>
+              <a href="/committes.html">Committees</a>
             </div>
             <div id="logo">
-              <img src="./assets/logo.svg" alt="AMIMUN logo" srcset="" />
-              <p>AMIMUN 2022</p>
+              <a href="./index.html"
+                ><img src="./assets/logo.png" alt="AMIMUN logo" srcset=""
+              /></a>
             </div>
-            <div class="links"><a href="#">Pricing</a><a href="#">About</a></div>
+            <div class="links">
+              <a href="#">Apply</a><a href="#">Gallery</a>
+              <a href="/committes.html">AMIMUN Club</a>
+              <a href="/committes.html">Contact Us</a>
+            </div>
           </nav>
         <div class="smooth-scroll-wrapper">
             <div class="content">
