--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
       <nav>
         <ul class="links">
-          <li><a href="#">About</a></li>
+          <li><a href="./about.html">About</a></li>
           <li class="test">
             <a href="#">Our Team</a>
             <div class="sub-menu-1">
